# deepscribe-ai

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: __init__.py  content_planner.py  crew.py  editor.py  insight_validator.py  researcher.py  title_strategist.py  writer.py
backend/app/api/: __init__.py  execution.py  execution_manager.py  projects.py  schemas.py  websocket.py
backend/app/core/: __init__.py  config.py  database.py  llm.py  logging.py  parsing.py  retry.py  tools.py
backend/app/models/: __init__.py  draft.py  log.py  plan.py  project.py  research.py  title.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/common/: Logo.tsx
frontend/src/components/layout/: Layout.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: DraftReviewPage.tsx  ExecutionPage.tsx  ExportPage.tsx  HomePage.tsx  NewProjectPage.tsx  PlanReviewPage.tsx  ProjectsPage.tsx  TitleSelectionPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
